bug 229270 : fix non-BMP (Unicode plane 1 and above) character rendering (r=bryner, sr=dbaron)