gfx/src/gtk/nsFontMetricsXft.cpp
@@ -1035,7 +1035,7 @@ nsFontMetricsXft::CacheFontMetrics(void)
 }
 
 nsFontXft *
-nsFontMetricsXft::FindFont(PRUnichar aChar)
+nsFontMetricsXft::FindFont(PRUint32 aChar)
 {
 
     // If mPattern is null, set up the base bits of it so we can
@@ -1066,7 +1066,7 @@ nsFontMetricsXft::FindFont(PRUnichar aChar)
     }
 
     nsFontXft *font = (nsFontXft *)mLoadedFonts.ElementAt(0);
-    if (font->HasChar(PRUint32(aChar)))
+    if (font->HasChar(aChar))
         return font;
 
     // We failed to find the character in the best-match font, so load
@@ -1079,7 +1079,7 @@ nsFontMetricsXft::FindFont(PRUnichar aChar)
 
     for (PRInt32 i = 1, end = mLoadedFonts.Count(); i < end; ++i) {
         nsFontXft *font = (nsFontXft *)mLoadedFonts.ElementAt(i);
-        if (font->HasChar(PRUint32(aChar)))
+        if (font->HasChar(aChar))
             return font;
     }
 
